[gd_scene load_steps=3 format=2]

[ext_resource path="res://guis/DeployGui.gd" type="Script" id=1]
[ext_resource path="res://resources/Gugi-Regular-Medium.tres" type="DynamicFont" id=2]

[node name="DeployGui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="UnitPalette" type="ColorRect" parent="."]
anchor_right = 1.0
margin_left = 245.7
margin_top = 474.95
margin_right = -245.3
margin_bottom = 563.95
size_flags_horizontal = 4
color = Color( 0.12549, 0.443137, 0.698039, 0.32549 )

[node name="LineCount" type="Label" parent="UnitPalette"]
margin_left = 4.44998
margin_top = 6.04999
margin_right = 34.45
margin_bottom = 57.05
custom_fonts/font = ExtResource( 2 )
text = "5"

[node name="TroopCount" type="Label" parent="UnitPalette"]
margin_left = 193.5
margin_top = 6.19998
margin_right = 223.5
margin_bottom = 57.2
custom_fonts/font = ExtResource( 2 )
text = "5"

[node name="RegimentCount" type="Label" parent="UnitPalette"]
margin_left = 376.4
margin_top = 5.89999
margin_right = 406.4
margin_bottom = 56.9
custom_fonts/font = ExtResource( 2 )
text = "5"

[node name="BtMakeLine" type="Button" parent="UnitPalette"]
margin_left = 53.3974
margin_top = 20.0714
margin_right = 130.397
margin_bottom = 40.0714
focus_mode = 0
enabled_focus_mode = 0
text = "Make Line"

[node name="BtMakeTroop" type="Button" parent="UnitPalette"]
margin_left = 230.936
margin_top = 21.24
margin_right = 316.936
margin_bottom = 41.24
focus_mode = 0
enabled_focus_mode = 0
text = "Make Troop"

[node name="BtMakeRegiment" type="Button" parent="UnitPalette"]
margin_left = 414.904
margin_top = 21.8565
margin_right = 525.904
margin_bottom = 41.8565
focus_mode = 0
enabled_focus_mode = 0
text = "Make Regiment"

